--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@codemirror/lang-json": "^6.0.1",
+        "@uiw/react-codemirror": "^4.21.19",
         "axios": "^1.5.1",
         "flowbite": "^1.8.1",
         "flowbite-react": "^0.6.3",
