--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@codemirror/lang-json": "^6.0.1",
+        "@codemirror/language": "^6.9.1",
         "@uiw/react-codemirror": "^4.21.19",
         "axios": "^1.5.1",
         "flowbite": "^1.8.1",
